<resources>
    <string name="app_name">ESchool</string>
    <string name="connection">Connection</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">uadb@gmail.com</string>
    <string name="formation">Formation</string>
    <string name="mark">Mark</string>
    <string name="university">University</string>
    <string name="cancel">Cancel</string>
    <string name="inscription">Inscription</string>
    <string name="help">Help</string>
    <string name="firstName">First name</string>
    <string name="lastName">Last name</string>
    <string name="degrees">Degrees</string>
    <string name="oLevel">O Level</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="save">Save</string>
    <string name="welcome">Welcome</string>
    <string name="wait">Please wait...</string>
    <string name="errorFields">Compulsory fields</string>
    <string name="errorConnection">Connection error</string>
    <string name="errorParameters">incorrect parameters </string>
    <string name="errorSave">Inscription failled</string>
    <string name="successSave">Inscription success</string>
    <string name="addUser">Add user</string>
    <string name="deleteUser">Delete user</string>
    <string name="updateUser">Update user</string>
    <string name="listUser">List user</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_university">Map</string>
</resources>
