<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConnectionActivity"
    android:layout_margin="@dimen/size_title"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:gravity="center"
        android:textSize="@dimen/size_title"
        android:textStyle="bold|italic"
        android:id="@+id/tvConnection"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:layout_below="@id/tvConnection"
        android:layout_marginTop="20dp"
        android:id="@+id/txtLogin"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/txtLogin"
        android:layout_marginTop="20dp"
        android:id="@+id/txtPassword"
        android:inputType="textPassword"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/btnConnection"
        android:textSize="@dimen/size_title"
        android:layout_below="@id/txtPassword"
        android:background="@color/color_maroon"
        android:textColor="@color/color_white"
        android:textColorHighlight="@color/colorPrimaryDark"

        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/inscription"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/btnInscription"
        android:textSize="@dimen/size_title"
        android:layout_below="@id/btnConnection"
        android:background="@color/color_blue"
        android:textColor="@color/color_white"
        android:textColorHighlight="@color/colorPrimaryDark"
        />
</RelativeLayout>